# devspoon-portfolio-blog

./: .coveragerc  .env  .gitignore  CONTRIBUTING.md  LICENSE  README.md  conftest.py  fabfile.py  manage.py  orm_test.ipynb  pyproject.toml  pytest.ini  test.txt
.github/ISSUE_TEMPLATE/: bug_report.md  clean-up-or-repactoring-report.md  documentation-report.md  error-report.md  feature_request.md  test-request.md
.github/workflows/: deploy.yml  deploy.yml_back  deploy.yml_pending  stage-ver-deploy.yml  test-ver-deploy.yml  testing.yml
blog/: admin.py  sitemaps.py  urls.py
blog/admin/: __init__.py  blog_admin.py  blog_common_admin.py  books_admin.py  common_admin.py  default_admin.py  onlinestudy_admin.py  opensource_admin.py  project_admin.py
blog/models/: __init__.py  blog.py  blog_reply.py  boards.py  default.py  like.py  reply.py  siteinfo.py
blog/templatetags/: blog_base_tag.py  default_tags.py  pagination_tags.py  public_tags.py
blog/tests/: factories.py  test_blog_html.py
blog/views/: index.py  main.py
board/: sitemaps.py  urls.py
board/admin/: __init__.py  board_common_admin.py  (+7 more)
celery_etc/: celery_run.sh
config/: asgi.py  celery.py  urls.py  wsgi.py
core/: replica_router.py
custom_middlewares/: apps.py  models.py
doc/: note_commands.md  reference.md
helpers/: translate_sample.html
home/: sitemaps.py  urls.py
ipynb_files/: orm_base.ipynb
portfolio/: admin.py  models.py  sitemaps.py  urls.py  views.py
requirements/: dev.txt  dev_ubuntu22.04.txt  test.txt
templates/: layout.html
users/: admin.py  models.py  tasks.py  urls.py
(+187 files in other folders)
