[tool.poetry]
name = "devspoon-portfolio-blog"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.7"
django-decouple = "^2.1"
django-redis = "^5.4.0"
pymysql = "^1.1.0"
django-cors-headers = "^4.3.0"
django-mptt = "^0.15.0"
django-anymail = "^10.2"
django-imagekit = "^5.0.0"
django-admin-rangefilter = "^0.11.2"
django-user-agents = "^0.4.0"
django-summernote = "^0.8.20.0"
django-allauth = "^0.58.1"
django-recaptcha = "^3.0.0"
psycopg2-binary = "^2.9.9"
beautifulsoup4 = "^4.12.2"
django-braces = "^1.15.0"
email-validator = "^2.1.0.post1"
isort = "^5.12.0"
django-request-logging = "^0.7.5"
django-sendgrid-v5 = "^1.2.3"
python-gettext = "^5.0"
uvicorn = "^0.30.1"
daphne = "^4.1.2"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.2.0"
django-extensions = "^3.2.3"
django-silk = "^5.0.4"
celery = "^5.3.4"
django-celery-beat = "^2.5.0"
django-celery-results = "^2.5.1"


[tool.poetry.group.test.dependencies]
coverage = "^7.3.2"
django-silk = "^5.0.4"
django-nose = "^1.4.7"
pytest-django = "^4.6.0"
pytest-factoryboy = "^2.6.0"


[tool.poetry.group.stage.dependencies]
celery = "^5.3.4"
django-celery-beat = "^2.5.0"
django-celery-results = "^2.5.1"
sentry-sdk = "^1.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
